--- a/css/style-mo.less
+++ b/css/style-mo.less
@@ -1181,10 +1181,10 @@ table.fiq-t { .t-fix; .coll; }
               .fiq-t {
                 tr { .rel;
                   &:nth-child(even) { .bgc(#FAFCFE); .-t(#DDDDDD); .-b(#DDDDDD); }
-                  &:after { .cnt; .wh(8,100%); .bgc(#ddd); .abs; .lt; }
-                  td { .fs(24); color:#222; .h(92); .lh(92); .-box; .p(0,10);
+                  td { .fs(24); color:#222; .h(92); .lh(92); .-box; .p(0,10); .rel;
                     &:nth-child(1) { .tl; .pl(25);
                       span { .fs(20); color:#888; }
+                      &:after { .cnt; .wh(8,100%); .bgc(#ddd); .abs; .lt; }
                     }
                     &:nth-child(2) { .tr;
                       .fiq-indi {
@@ -1197,8 +1197,10 @@ table.fiq-t { .t-fix; .coll; }
                     &:nth-child(3) { .tr;
                       span { .fs(18); color:#fff; .p(6,12); .-box; .tc; .regular; .br(4); .ib; height: auto; line-height: normal; }
                     }
+                    &:nth-child(1):after { .cnt; .wh(8,100%); .bgc(#ddd); .abs; .lt; }
                   }
-                  &.fiq-up {
+                  &.fiq-up { .rel;
+                    td:nth-child(1):after { .cnt; .bgc(#ff0000); }
                     &:after { .bgc(#ff0000); }
                     td{
                       &:nth-child(2) {
@@ -1208,7 +1210,8 @@ table.fiq-t { .t-fix; .coll; }
                       &:nth-child(3) span { .bgc(#ff0000); }
                     }
                   }
-                  &.fiq-down {
+                  &.fiq-down { .rel;
+                    td:nth-child(1):after { .cnt; .bgc(#2175FF); }
                     &:after { .bgc(#2175FF); }
                     td{
                       &:nth-child(2) {
@@ -1328,7 +1331,10 @@ table.fiq-t { .t-fix; .coll; }
                           }
                           span { .w(90); color:#888; .mr(30); .ib; }
                           .fiq-s { .tc; color:#fff; .p(2,0,0); .br(6); .bgc(#888); }
-                          .fiq-indi { .wh(5,5); .bgc(#888); .mb(5); border-left: 1vw solid transparent; border-right: 1vw solid transparent; .ib; }
+                          .fiq-indi { .wh(5,5); .bgc(#888); .mb(5); border-left: 1vw solid transparent; border-right: 1vw solid transparent; .ib;
+                            &.fiq-up { border-bottom: 1.7vw solid #FF0000; .wh(0,0); .mb(0); background: none; }
+                            &.fiq-down { border-top: 1.7vw solid #2175FF;  .wh(0,0); .mb(0); background: none; }
+                          }
                         }
                         &.fiq-up {
                           p {
@@ -1336,7 +1342,6 @@ table.fiq-t { .t-fix; .coll; }
                               span { .regular; }
                             }
                             .fiq-s { .bgc(#FF0000); }
-                            .fiq-indi { border-bottom: 1.7vw solid #FF0000; .wh(0,0); .mb(0); background: none; }
                           }
                         }
                         &.fiq-down {
@@ -1345,7 +1350,6 @@ table.fiq-t { .t-fix; .coll; }
                               span { .regular; }
                             }
                             .fiq-s { .bgc(#2175FF); }
-                            .fiq-indi { border-top: 1.7vw solid #2175FF;  .wh(0,0); .mb(0); background: none; }
                           }
                         }
                       }
@@ -1403,7 +1407,10 @@ table.fiq-t { .t-fix; .coll; }
                               }
                               span { .w(90); color:#888; .mr(30); .ib; }
                               .fiq-s { .tc; color:#fff; .p(2,0,0); .br(6); .bgc(#888); .lh(27); }
-                              .fiq-indi { .wh(5,5); .bgc(#888); .mb(5); border-left: 1vw solid transparent; border-right: 1vw solid transparent; .ib; }
+                              .fiq-indi { .wh(5,5); .bgc(#888); .mb(5); border-left: 1vw solid transparent; border-right: 1vw solid transparent; .ib;
+                                &.fiq-up { border-bottom: 1.7vw solid #FF0000; .wh(0,0); .mb(0); background: none; }
+                                &.fiq-down { border-top: 1.7vw solid #2175FF;  .wh(0,0); .mb(0); background: none; }
+                              }
                             }
                             &.fiq-up {
                               p {
@@ -1411,7 +1418,6 @@ table.fiq-t { .t-fix; .coll; }
                                   span { .regular; }
                                 }
                                 .fiq-s { .bgc(#FF0000); }
-                                .fiq-indi { border-bottom: 1.7vw solid #FF0000; .wh(0,0); .mb(0); background: none; }
                               }
                             }
                             &.fiq-down {
@@ -1420,7 +1426,6 @@ table.fiq-t { .t-fix; .coll; }
                                   span { .regular; }
                                 }
                                 .fiq-s { .bgc(#2175FF); }
-                                .fiq-indi { border-top: 1.7vw solid #2175FF;  .wh(0,0); .mb(0); background: none; }
                               }
                             }
                           }
@@ -1471,15 +1476,10 @@ table.fiq-t { .t-fix; .coll; }
               a { .contain('../img/pc/ico-download.svg'); .wh(28,24); .pointer; .ib; }
             }
           }
-        }
-        &.fiq-up {
-          li {
-            &:nth-child(3) p + p, &:nth-child(4) p + p { color:#FF0000; .bold; }
-          }
-        }
-        &.fiq-down {
-          li {
-            &:nth-child(3) p + p, &:nth-child(4) p + p { color:#2175FF; .bold; }
+          &:nth-child(3) p + p, &:nth-child(4) p + p {
+            &.fiq-stay { color:#FF872B; .bold; }
+            &.fiq-up { color:#FF0000; .bold; }
+            &.fiq-down { color:#2175FF; .bold; }
           }
         }
       }
