--- a/css/style-pc.less
+++ b/css/style-pc.less
@@ -1885,20 +1885,21 @@ select.fiq-se, input.fiq-input { outline: none; }
                           &:nth-child(1) { color:#DD872B; }
                           &:nth-child(2) { color:#222!important; .bold; }
                           .fiq-s { .lh(18); color:#fff; .bgc(#888); .ml(0); .tc; .p(2,17); .-box; .br(6);  }
-                          .fiq-indi { .wh(11,4); .bgc(#888); .ib; .mb(2); }
+                          .fiq-indi { .wh(11,4); .bgc(#888); .ib; .mb(2);
+                            &.fiq-up { .wh(0); background: none; border-left: 6px solid transparent; border-right: 6px solid transparent; border-bottom: 10px solid #ff0000; .mb(0); }
+                            &.fiq-down { .wh(0); background: none; border-left: 6px solid transparent; border-right: 6px solid transparent; border-top: 10px solid #2175FF; .mb(0); }
+                          }
                         }
                         &.fiq-up {
                           p {
                             &:nth-child(1) { color:#FF0000; .bold; }
                             .fiq-s { .bgc(#FF0000); }
-                            .fiq-indi { .wh(0); background: none; border-left: 6px solid transparent; border-right: 6px solid transparent; border-bottom: 10px solid #ff0000; .mb(0); }
                           }
                         }
                         &.fiq-down {
                           p {
                             &:nth-child(1) { color:#2175FF; .bold; }
                             .fiq-s { .bgc(#2175FF); }
-                            .fiq-indi { .wh(0); background: none; border-left: 6px solid transparent; border-right: 6px solid transparent; border-top: 10px solid #2175FF; .mb(0); }
                           }
                         }
                       }
@@ -1924,7 +1925,7 @@ select.fiq-se, input.fiq-input { outline: none; }
                 .fiq-tit { .fs(14); .ls(-0.35); .lh(40); .ib; .vam; .w(79); .tl; .m(0); .regular; .-t; .pt(0); }
                 .fiq-tit2 { .w(130); .ml(45); }
                 .fiq-date-wrap { .ib; .-a(#DDDDDD); .br(0); .-box; .p(0,10); .lh(40); .wh(306,40); .ib; .vam;
-                  input { .fs(14); .wh(125,40); .-box; .ib; .vam; .-a; background: transparent; }
+                  input { .fs(14); .wh(125,40); .lh(40); .-box; .ib; .vam; .-a; background: transparent; .p(0); }
                   span { .fs(14); .ib; .m(0,10); .lh(40); .vam; }
                 }
                 .select-style { .w(130); .t(0); .br(0); .ml(10); .ib; position:relative; height:40px; background:#fff; box-sizing:border-box; .ib; .vam; }
@@ -1955,7 +1956,7 @@ select.fiq-se, input.fiq-input { outline: none; }
                   p { .fs(20); .lh(27); .ib; .vam; .mb(10); .bold;
                     span { .fs(14); color:#888; .ib; .vam; .mr(10); .regular; }
                   }
-                  p + p { .vam; .w(330); overflow: hidden; text-overflow: ellipsis; display: -webkit-inline-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical; word-wrap:break-word; line-height: 1.2em; .pointer; }
+                  p + p { .vam; .w(590); overflow: hidden; text-overflow: ellipsis; display: -webkit-inline-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical; word-wrap:break-word; line-height: 1.2em; .pointer; }
                   ul {
                     li { .w(250);
                       p { .fs(14); .regular;
@@ -1963,20 +1964,21 @@ select.fiq-se, input.fiq-input { outline: none; }
                         &:nth-child(1) { color:#DD872B; }
                         &:nth-child(2) { color:#222!important; .bold; }
                         .fiq-s { color:#fff; .bgc(#888); .ml(-5); .lh(17); .tc; .p(2,17); .-box; .br(6); }
-                        .fiq-indi { .wh(11,4); .bgc(#888); .ib; .mb(2); }
+                        .fiq-indi { .wh(11,4); .bgc(#888); .ib; .mb(2);
+                          &.fiq-up { .wh(0); background: none; border-left: 6px solid transparent; border-right: 6px solid transparent; border-bottom: 10px solid #ff0000; .mb(0); }
+                          &.fiq-down { .wh(0); background: none; border-left: 6px solid transparent; border-right: 6px solid transparent; border-top: 10px solid #2175FF; .mb(0); }
+                        }
                       }
                       &.fiq-up {
                         p {
                           &:nth-child(1) { color:#FF0000; .bold; }
                           .fiq-s { .bgc(#FF0000); }
-                          .fiq-indi { .wh(0); background: none; border-left: 6px solid transparent; border-right: 6px solid transparent; border-bottom: 10px solid #ff0000; .mb(0); }
                         }
                       }
                       &.fiq-down {
                         p {
                           &:nth-child(1) { color:#2175FF; .bold; }
                           .fiq-s { .bgc(#2175FF); }
-                          .fiq-indi { .wh(0); background: none; border-left: 6px solid transparent; border-right: 6px solid transparent; border-top: 10px solid #2175FF; .mb(0); }
                         }
                       }
                     }
@@ -2016,21 +2018,15 @@ select.fiq-se, input.fiq-input { outline: none; }
                 th { .bgc(#F8F8F8); .-t(#DDDDDD); .-b(#DDDDDD); color:#888; .tc; .p(14,0); .-box; .regular; }
                 td { .-b(#ddd); .tc; .p(14,0); .-box;
                   a { .wh(22,18); .contain('../img/pc/ico-download.svg'); .ib; .pointer; }
-                }
-                &.fiq-stay {
-                  td {
-                    &:nth-child(3) { color:#FF872B; .bold; }
-                    &:nth-child(4) { color:#666; .bold; }
+                  &:nth-child(3) {
+                    &.fiq-stay { color:#FF872B; .bold; }
+                    &.fiq-up { color:#FF0000; .bold; }
+                    &.fiq-down { color:#2175FF; .bold; }
                   }
-                }
-                &.fiq-up {
-                  td {
-                    &:nth-child(3), &:nth-child(4) { color:#FF0000; .bold; }
-                  }
-                }
-                &.fiq-up {
-                  td {
-                    &:nth-child(3), &:nth-child(4) { color:#2175FF; .bold; }
+                  &:nth-child(4) {
+                    &.fiq-stay { color:#FF872B; .bold; }
+                    &.fiq-up { color:#FF0000; .bold; }
+                    &.fiq-down { color:#2175FF; .bold; }
                   }
                 }
               }
