--- a/css/style-mo.less
+++ b/css/style-mo.less
@@ -1518,7 +1518,9 @@ table.fiq-t { .t-fix; .coll; }
           }
         }
       }
-      .fiq-list-view { .fs(24); color:#fff; .wh(95,60); .lh(60); .tc; .br(4); .bgc(#2D3039); .block; .mt(15); .mh-c; }
+      .fiq-btns { .tc;
+        .fiq-a { .fs(24); color:#fff; .wh(95,60); .lh(60); .tc; .br(4); .bgc(#2D3039); .ib; .m(15,5,0,5); }
+      }
     }
     &.fiq-open { .block; }
   }
