--- a/css/style-pc.less
+++ b/css/style-pc.less
@@ -2070,7 +2070,9 @@ select.fiq-se, input.fiq-input { outline: none; }
           }
         }
       }
-      .fiq-list-view { .fs(12); color:#fff; .wh(95,40); .lh(40); .tc; .br(4); .bgc(#2D3039); .block; .mt(68); .mh-c; }
+      .fiq-btns { .tc;
+        .fiq-a { .fs(12); color:#fff; .wh(95,40); .lh(40); .tc; .br(4); .bgc(#2D3039); .ib; .m(68,5,0,5); }
+      }
     }
     &.fiq-on { .block; }
   }
