--- a/css/style-t.less
+++ b/css/style-t.less
@@ -1496,7 +1496,7 @@
         .fiq-top { .fs(0); width: auto; height: auto;
           input, .fiq-a { .fs(24); color:#222; .h(60); .lh(60); .-a(#DDDDDF); .br(4); .ib; .vam; }
           input { .w(73%); .tl; .pl(20); .-box; .mr(2%); }
-          .fiq-a { .w(25%); .-a; .bgc(#888); .tc; color:#fff; }
+          .fiq-a { .w(25%); .-a; .bgc(#2D3039); .tc; color:#fff; }
         }
         .fiq-search-cont { .mt(10); .-a(#DDDDDF); .-box; .br(4); .rel;
           &:before { .cnt; .wh(1,100%); .bgc(#DDDDDF); .abs; .lt(50%,0); }
@@ -1516,7 +1516,9 @@
             }
           }
         }
-        .fiq-list-view { .fs(24); color:#fff; .wh(95,60); .lh(60); .tc; .br(4); .bgc(#152B67); .block; .mt(15); .mh-c; }
+        .fiq-btns { .tc;
+          .fiq-a { .fs(24); color:#fff; .wh(95,60); .lh(60); .tc; .br(4); .bgc(#2D3039); .ib; .m(15,5,0,5);  }
+        }
       }
       &.fiq-open { .block; }
     }
